# obzenflow-fsm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORPORATE_ACKNOWLEDGMENT_PROCESS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
.obsidian/: workspace.json
docs/: design-mut-context-and-owned-state.md  design-timeouts-errors-validation.md  flowip-fsm-001-mutable-context-timeouts-errors.md  flowip-fsm-002-builder-dsl.md
docs/completed/: flowip-fsm-001-mutable-context-timeouts-errors.md  flowip-fsm-002-builder-dsl.md
examples/: simple_fsm.rs
obzenflow-fsm-macros/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
obzenflow-fsm-macros/src/: codegen.rs  lib.rs  parse.rs
src/: builder.rs  error.rs  handlers.rs  lib.rs  machine.rs  types.rs
tests/: README.md  circle_1_race_condition.rs  circle_2_async_coordination.rs  circle_3_journal_subscription.rs  circle_4_mathematical_properties.rs  circle_5_timeout_cancellation.rs  circle_6_memory_corruption.rs  test_async_coordination.rs  test_builder_enforcement.rs  test_builder_only_construction.rs  test_compile_safety.rs  test_comprehensive.rs  test_dsl_basic.rs  test_dsl_features.rs  test_edge_cases.rs  test_journal_subscription.rs  test_mathematical_properties.rs  test_memory_corruption.rs  test_race_condition.rs  test_simple.rs  test_timeout_cancellation.rs
